# hedera_brevet_chain

./: README.md
backend/: .gitignore  Cargo.toml
backend/migrations/: 20250804104150_hederatable.sql  20250830183936_table.sql
backend/src/: ai_client.rs  db.rs  hedera_client.rs  main.rs  models.rs  routes.rs
backend/static/: index.html  script.js  style.css
ia_engine/: Dockerfile  requirements.txt
ia_engine/src/: ai.py  antecedent_search.py  api.py  audio.py  classify.py  translate.py
